--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
     <main>
         <section id="home" class="hero">
+            <video autoplay muted loop>
+                <source src="assets/hero.mp4" type="video/mp4">
+            </video>
             <div class="hero-content">
                 <h1 class="hero-title">Style yourself. Own the moment.</h1>
                 <button class="cta-btn" onclick="scrollToProducts()">Shop now</button>
